--- a/index.html
+++ b/index.html
@@ -4,102 +4,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>笹倉花愛のプロフィール</title>
+
+    <!-- cssの読み込み -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- アイコンフォントの読み込み -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+
 </head>
 
 <body>
+
+    <!-- ヘッダー -->
     <header id="#top">
-        <h1>題名</h1>
-        <!-- <ul>
-            <li><a href="#about">私について</a></li>
-            <li><a href="#works">制作物</a></li>
-            <li><a href="#contact">お問い合わせ</a></li>
-        </ul> -->
-        </header>
+        <h1>ロゴ</h1>
+        <div class="menu">
+            <spen class="material-symbols-outlined" id="open">menu</spen>
+        </div>
+    </header>
 
-        <main>
-            <div class="top-hero">
-                <img src="annie-spratt-9DedxUSwLg4-unsplash.jpg" ait="ロゴ画像" class="main-image">
-            </div>
-
-            <section id="about" class="about">
-                <h2>私について</h2>
-                <p>about me</p>
-                <p>詳しく見る→</p>
-            </section>
-
-            <section class="name">
-                <h2>名前</h2>
-                <div>
-                    <img src="christopher-campbell-rDEOVtE7vOs-unsplash.jpg" ait="ロゴ画像" class="about-image">
-                </div>
-                <h3>簡単な説明</h3>
-            </section>
-
-            <sectioin class="works">
-                <h2>制作物</h2>
-                <p>works</p>
-                <div class="works-box">
-                    <div>
-                        <img src="annie-spratt-BrfCiLC7Grc-unsplash.jpg" ait="ロゴ画像">
-                        <p>説明</p>
-                    </div>
-
-                    <div>
-                        <img src="annie-spratt-r4-Go4AjUL8-unsplash.jpg" ait="ロゴ画像">
-                        <p>説明</p>
-                    </div>
-
-                    <div>
-                        <img src="dan-gold-hsMxqh63j-0-unsplash.jpg" ait="ロゴ画像">
-                        <p>説明</p>
-                    </div>
-
-                    <div>
-                        <img src="naomi-irons-l6R68Kcgehw-unsplash.jpg" ait="ロゴ画像">
-                        <p>説明</p>
-                    </div>
-
-                </div>
-            </sectioin>
-        </main>
-
-        <footer id="last">
-            <sectioin class="contact">
-                <h2>お問い合わせ</h2>
-                <p>contact</p>
-                <hr>
-                <label>
-
-                    <p>名前</p>
-
-                    <input type="text" placeholder="フルネームで名前を書いて下さい">
-                </label>
-                <label>
-                    <p>メールアドレス</p>
-
-                    <input type="text" placeholder="メールアドレスを書いて下さい">
-                </label>
-                <label>
-                    <p>問い合わせ内容</p>
-
-                    <textarea rows="10" cols="70" placeholder="詳しい内容内容を書いて下さい"></textarea>
-                </label>
-            </sectioin>
-
-        </footer>
+    <div class="overlay">
+        <span class="material-symbols-outlined" id=close>close</span>
+        <nav>
+            <ul>
+                <li><a href="#about">私について</a></li>
+                <li><a href="#works">制作物</a></li>
+                <li><a href="#contact">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </div>
 
 
-        <a href="#top">TOPに戻る</a>
+    <!-- メイン -->
+    <main>
+        <section class="wave-section">
+            <img src="annie-spratt-9DedxUSwLg4-unsplash.jpg" ait="お花の背景" class="bg-img">
 
-        <aside>
-            <p class="last-p">インスタグラム</p>
-            <p>電話</p>
-            <p>フェイスブック</p>
-            <p>名前の公式ホームページ@All company</p>
-        </aside>
+            <svg class="wave front" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"
+                preserveAspectRaito="none">
+                <path fill="red" fill-opacity="1"
+                    d="M0,256L80,218.7C160,181,320,107,480,80C640,53,800,75,960,117.3C1120,160,1280,224,1360,256L1440,288L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+                </path>
+            </svg>
+        </section>
 
+        <section id="about">
+            <h2>私について</h2>
+            <p>about me</p>
+            <a href="#">詳しく見る→</a>
+        </section>
+
+        <div class="wave-section-back">
+
+            <svg class="wave back" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
+                <path fill="red" fill-opacity="1"
+                    d="M0,224L48,186.7C96,149,192,75,288,74.7C384,75,480,149,576,186.7C672,224,768,224,864,229.3C960,235,1056,245,1152,234.7C1248,224,1344,192,1392,176L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+                </path>
+            </svg>
+        </div>
+    </main>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+<!-- <h2>名前</h2>
+<div>
+    <img src="christopher-campbell-rDEOVtE7vOs-unsplash.jpg" ait="ロゴ画像" class="about-image">
+</div>
+<h3>簡単な説明</h3>
+</div>
+
+<sectioin class="works">
+    <h2>制作物</h2>
+    <p>works</p>
+    <div class="works-box">
+        <div>
+            <img src="annie-spratt-BrfCiLC7Grc-unsplash.jpg" ait="ロゴ画像">
+            <p>説明</p>
+        </div>
+
+        <div>
+            <img src="annie-spratt-r4-Go4AjUL8-unsplash.jpg" ait="ロゴ画像">
+            <p>説明</p>
+        </div>
+
+        <div>
+            <img src="dan-gold-hsMxqh63j-0-unsplash.jpg" ait="ロゴ画像">
+            <p>説明</p>
+        </div>
+
+        <div>
+            <img src="naomi-irons-l6R68Kcgehw-unsplash.jpg" ait="ロゴ画像">
+            <p>説明</p>
+        </div>
+
+    </div>
+</sectioin>
+</main>
+
+<footer id="last">
+    <sectioin class="contact">
+        <h2>お問い合わせ</h2>
+        <p>contact</p>
+        <hr>
+        <label>
+
+            <p>名前</p>
+
+            <input type="text" placeholder="フルネームで名前を書いて下さい">
+        </label>
+        <label>
+            <p>メールアドレス</p>
+
+            <input type="text" placeholder="メールアドレスを書いて下さい">
+        </label>
+        <label>
+            <p>問い合わせ内容</p>
+
+            <textarea rows="10" cols="70" placeholder="詳しい内容内容を書いて下さい"></textarea>
+        </label>
+    </sectioin>
+
+</footer>
+
+
+<a href="#top">TOPに戻る</a>
+
+<aside>
+    <p class="last-p">インスタグラム</p>
+    <p>電話</p>
+    <p>フェイスブック</p>
+    <p>名前の公式ホームページ@All company</p>
+</aside>
+
+</body>
+
+</html> -->
